Fix css spacing on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -208,9 +208,9 @@ footer {
 		border: none;
 		}
 	footer {
-		position: relative;
+		position: fixed;
 		margin: 40px 0 0 0;
-		bottom: auto;
+		bottom: 0;
 		border: none;
 		background-size: 95%;
 		background-image: url("{{ site.baseurl }}/assets/img/largescrollbottom.png");
